--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -11,7 +11,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-
+                <groupId>springframework</groupId>
+                <artifactId>spring</artifactId>
+                <version>1.0-m4</version>
             </dependency>
         </dependencies>
 
